[tool.poetry]
name = "dsrnet"
version = "0.1.0"
description = ""
authors = ["ShunyaYamagami <othello200063@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.1.1%2Bcu121-cp311-cp311-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.16.1%2Bcu121-cp311-cp311-linux_x86_64.whl#sha256=b4eec1d9c04eb036b4e72aea5f43ae33c06414da9d36391bd04ffd31ad82fba9" }
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
scikit-image = "^0.23.2"
pyyaml = "^6.0.1"
pydantic = "^2.7.1"
scikit-learn = "^1.4.2"
tqdm = "^4.66.4"
tensorboardx = "^2.6.2.2"
japanize-matplotlib = "^1.1.3"



[tool.poetry.group.dev.dependencies]
ruff = "^0.2.0"
notebook = "^7.0.6"
nbstripout = "^0.7.1"


[tool.ruff]
line-length = 130
target-version = "py310"

exclude = ["DSRNet/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
